<resources>
    <string name="app_name">ADITYA GATE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_csefragment">CSE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_itfragment">IT</string>
    <string name="title_activity_eeefragment">EEE</string>
    <string name="title_activity_ecefragment">ECE</string>
    <string name="title_activity_civilfragment">CIVIL</string>
    <string name="title_activity_mechfragment">MECH</string>
    <string name="title_activity_settings">Settings</string>
    <string name="faculty_name1">Vanathi HOD :</string>
    <string name="faculty_name2">Ravi Kumar :</string>
    <string name="faculty_name3">Prasad Rao:</string>
    <string name="faculty_name4">Srinu Kolli :</string>
    <string name="faculty_name5">Durga Prasad :</string>
    <string name="faculty_no1">9177834434</string>
    <string name="faculty_no2">9491223343</string>
    <string name="faculty_no3">7732014411</string>
    <string name="faculty_no4">9640019222</string>
    <string name="faculty_no5">8332944811</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_about">About</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
